--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,36 @@ dist
 #보안관련해서..
 package-lock.json
 
+
+### Java template
+*.class
+ 
+# Package Files #
+*.jar
+*.war
+*.ear
+ 
+### macOS template
+*.DS_Store
+.AppleDouble
+.LSOverride
+ 
+# IntelliJ project files
+.idea
+.idea/*.xml
+*.iml
+out
+gen
+build
+rebel.xml
+ 
+# Compliled files
+/target/
+**/target
+ 
+/example/
+ 
+# Gradle
+.gradle
+/build/
+.gradletasknamecache
